@@ -158,8 +158,9 @@ ld_new_LDADD = $(ldadd_var)
 EXTRA_ld_new_SOURCES = $(TARGETSOURCES)
 
 incremental_dump_SOURCES = incremental-dump.cc
-incremental_dump_DEPENDENCIES = $(TARGETOBJS) libgold.a $(LIBIBERTY)
-incremental_dump_LDADD = $(TARGETOBJS) libgold.a $(LIBIBERTY) \
+incremental_dump_DEPENDENCIES = $(TARGETOBJS) libgold.a $(LIBIBERTY) \
+	$(LIBINTL_DEP)
+incremental_dump_LDADD = $(TARGETOBJS) libgold.a $(LIBIBERTY) $(LIBINTL) \
 	 $(THREADSLIB) $(LIBDL)
 
 # Use an explicit dependency for the bison generated header file.
